
- Disabled the Society Monitor's Topology view. It used the old
  Topology service, which is being removed.
- Began work on support for viewing XML society definitions.
- Moved CSMART related .q files to csmart/data/common. The preferred
  location for recipeQueries.q is now csmart/data/common. However,
  files in the old CIP/configs/common _will_ still be found.

Release 10.0:
This is a major Cougaar release, incorporating all previous fixes plus
some major code cleanup, in preparation for this year's
changes. Database definition files have been updated and should be
reloaded, in particular to reflect the obsolesence of ClusterIdentifier.

- Removed old csmart/bin/build.xml Ant script. Instead use generated
  Ant build script in csmart/build.xml. Targets are identical, but
  developers should reset COUGAAR_DEV_PATH from csmart/tmpdir to
  csmart/tmp/classes. Additionally, any setting in ~/.ant.properties
  should probably instead be in csmart/module.properties.
- Removed CSMART Domain. Edit your configs/common/LDMDomains.ini as
  necessary.
- Replace Default Workspace.bin that used to contain serialized
  objects, with a much simpler and faster Default Workspace.xml - a
  human-editable file containing just the experiment names. All named
  experiments will be re-loaded from the database when you restart CSMART.
- Use SimpleAgent instead of ClusterImpl as default Agent class. The
  provided database csv files have been updated, but ClusterImpl will
  still work just fine.
- ClusterIdentifier has been removed, in favor of MessageAddress. The
  provided database csv files have been updated, and should be
  reloaded. In addition, any previously generated and saved
  experiments will need to be updated. Once loaded in the database, run
  the provided update script,
  csmart/data/database/scripts/mysql/sql/cluster-id-removal.sql. In
  addition, at CSMART experiment load time, any instance of
  ClusterIdentifier will be replaced by MessageAddress. 